# studier

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  model.go  parse.go  progress.go  quiz.go  styles.go
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  setup.sh
sets/: chemistry.txt  cpr.txt  pe.st  spanish.txt  spanishvocab.txt  wadol.txt  world.txt
sets/apush/: p1.st  p1.txt  p2.st  p4.st
sets/apush/ch/: ch10.st  ch11.st  ch12.st  ch13.st  ch14.st  ch15.st  ch16.st  ch17.st  ch18.st  ch19.st  ch2.st  ch2.txt  ch20.st  ch21.st  ch3.st  ch4.st  ch5.st  ch6.st  ch7.st  ch8.st  ch9.st
sets/bio/: topic1.st
sets/bio/units/: cell.st  cellstructure.st  ecology.st  energy.st  mitosis.st  molecular.st  replication.st  stemcell.st
sets/chemistry/: electromagnetic.txt  electronconfig.txt  history.txt  measurement.txt  nuclear.txt  periodictable.txt
sets/foundations_world/first_civs/: civilizations.st  egypt.st  humanitarian.st  mesopotamia.st  others.st  study.st
sets/foundations_world/second_civs/: china.txt  chinarome.st  greeks.st  persians.txt  rome.st  study.txt
sets/frosh/: chemistry.txt  spanish.st
sets/frosh/chemistry/: bonding.txt  (+4 more)
sets/spanish/: conjugation.txt  foodvocab.txt  halloweenvocab.txt  lettertalentcelebration.txt  preteriteirreg.txt  vocab.st
sets/world/: americas.txt  daralislam.txt  eastasia.txt  europe.txt  general.txt  silkroad.txt  southsoutheastasia.txt  transaharan.txt  unit2.txt  unit3.txt  unit4.txt  unit5.txt  unit6.txt
src/: ask.rs  cmd.rs  main.rs  parse.rs
upload/: main.go  parse.go
(+56 files in other folders)
