[package]
name = "studier"
version = "0.1.0"
authors = ["Nv7"]
edition = "2021"
description = "Command-line studying thing"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
enum-as-inner = "0.4.0"
lazy_static = "1.4.0"
