[package]
name = "studier"
version = "1.0.1"
authors = ["Nv7"]
edition = "2021"
description = "Command-line studying thing"
license = "MIT"
repository = "https://github.com/Nv7-Github/studier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
enum-as-inner = "0.4.0"
lazy_static = "1.4.0"
